--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    padding: 0;
+    margin: 0;
+    background: rebeccapurple;
+}
 
 body {
     padding: 0;
@@ -11,8 +16,8 @@ body {
 #app {
     padding: 0 32px;
     margin: 0 auto;
-    width: 100%;
     max-width: 1440px;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background: #ddd;
 }
